# BookShelfScanner

./: .replit  README.md  app.py  book_detector.py  book_recommender.py  index.html  innovai_compile.py  innovai_engine.py  innovai_ui.html  models.py  pdf_enhancer.py  pyproject.toml  run_innovai.sh
attached_assets/: AIMEDIXAL.md  pdf_to_clean_images1.py
static/css/: custom.css
static/js/: script.js
templates/: index.html  restoration_results.html  restoration_steps.html  restore.html  results.html
